<resources>
    <string name="app_name">GraphTheory</string>

    <!--placeholder text-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jméno uživatele</string>
    <string name="nav_header_subtitle">email uživatele</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_statistic">Statistiky</string>

    <!--bottom navigation menu-->
    <string name="node">přidat vrchol</string>
    <string name="clear_paint_view">vyčistit</string>
    <string name="delete_one_object">smazat objekt</string>
    <string name="line">hrana</string>
    <string name="path">označ</string>
    <string name="node_move">posuň vrchol</string>

    <!--vyjížděcí menu-->
    <string name="menu_first">Cesta, tah, kružnice</string>
    <string name="menu_second">Most a artikulace</string>
    <string name="menu_third">Doplněk grafu</string>
    <string name="menu_fourth">Izomorfismus</string>
    <string name="menu_fifth">Bipartitní graf</string>
    <string name="menu_sixth">Hamiltonovský a Eulerův graf</string>
    <string name="menu_seventh">Kostra grafu</string>
    <string name="menu_eight">Skóre grafu</string>
    <string name="menu_ninth">Stromy</string>

    <string name="first_activity_text">
        <![CDATA[
        <p>$\\mathbf{Sled}$  - konečná posloupnost $S = (v_0, e_1, v_1, e_2,…, v_{k-1}, e_k, v_k)$, přičemž pro všechny $i = 1,…,k$ je $e_i=(v_{i-1},v_i )$
            Ve sledu se hrany a vrcholy můžou opakovat.</p>
        <p> $\\mathbf{Tah}$ je taký sled, v kterém se žádná hrana nevyskytuje dvakrát, (uzavřený i otevřený).</p>
        <p> $\\mathbf{Otevřený \\, tah}$ ve kterém jsou všechny vrcholy navzájem různé, se nazývá cesta. </p>
        <p> $\\mathbf{Uzavřená \\, cesta}$ se nazývá kružnice. </p>
        Délka sledu, tahu, cesty a kružnice = počet hran!!!
        ]]>
    </string>

    <string name="second_activity_text">
         <![CDATA[
            <p> $\\mathbf{Vrchol}$ v nazveme artikulací, jestliže graf $G - v$  má více komponent než graf $G$. </p>
            $\\mathbf{Hranu}$ e nazveme mostem, jestliže graf $G - e$ má více komponent než graf $G$.
         ]]>
    </string>

    <string name="third_activity_text">
        <![CDATA[
            <p> Graf $\\overline G = (V, \\overline E)$ je <b>doplněk grafu</b> G = (V,E), když hrana {$v_i, v_j$ } $\\in  \\overline E$ tehdy a jenom tehdy, když {$v_i, v_j$ } $\\in E$. Jinými slovy, dva vrcholy $v_i , v_j$ jsou sousední v $\\overline G$ právě tehdy, když nejsou sousední v $G$. </p>
            <font fgcolor="#ff6890a5">Poznámka: můžeme se setkat i s označením -G=(V, -E)</font>
         ]]>
    </string>

    <string name="fourth_activity_text">
        <![CDATA[
            <p>Dva grafy $G = (V,E)$ a $G\' = (V\',E\')$ nazveme <font fgcolor=\'red\'>izomorfní</font>, když existuje jednoznačné zobrazení $f : V -> V\'$ takové, že platí ${x, y} \\in E$ právě tehdy, když {$f (x), f ( y)$} $\\in E\'$. </p>
            <p>Zobrazení $f$ hovoříme <font fgcolor=\'red\'>izomorfizmus</font> grafů $G$ a $G´$. </p>
            Fakt, že $G \\, a \\, G´$ jsou izomorfní, zapisujeme $G \\cong G\'$ .
        ]]>
    </string>

    <string name="fifth_activity_text">
        <![CDATA[
            $\\mathbf{Úplným \\, bipartitním \\, grafem}$ Kr,s nazýváme bipartitní graf, kde $|V1| = r$, $|V2| = s$, a ve kterém je hranou spojen každý z r vrcholů množiny $V_1$ s každým z s vrcholů množiny $V_2$.
         ]]>
    </string>

    <string name="sixth_activity_text">
        <b>Eulerovský tah</b> v grafu G je otevřený nebo uzavřený tah, který obsahuje všechny hrany grafu G. \n
        <b>Eulerovský graf</b> je souvislý graf, ve kterém existuje eulerovský tah.
        \n
        \n
        <b>Hamiltonovská kružnice</b> v grafu G je kružnice obsahující všechny vrcholy grafu G. \n
        <b>Hamiltonovský graf</b> je graf, ve kterém existuje hamiltonovská kružnice.
    </string>

    <string name="seventh_activity_text">
        <font fgcolor='blue'>Skóre grafu = grafová posloupnost</font> \n
       Nechť G = (V, E) je graf s n vrcholy v1, v2, … vn. \n
        <font fgcolor='red'><b>Skóre grafu</b></font> G je posloupnost (degG(v1), degG(v2), …, degG(vn)).
    </string>

    <string name="eighth_activity_text">
        <font fgcolor='blue'><b>Strom</b></font> je souvislý graf, neobsahující kružnici \n
        <font fgcolor='blue'><b>Les</b></font> je acyklický graf (graf, který neobsahuje kružnici).
    </string>

    <string name="ninth_activity_text">
        <font fgcolor='blue'><b>Kostra grafu</b></font> G=(V,E) je strom T=(V,E´), který obsahuje všechny vrcholy grafu a E´ E, tj. acyklický a souvislý faktor grafu G.
    </string>

    <string name="example_text">

        <b>What</b>
        <big>neco duleziteho</big>
        <font fgcolor='red'>Running</font> <font fgcolor='green'>Running</font> \n
        <h1>Zkušební nadpis</h1> <i>the</i>  <p> takovýhle text je v odstavci </p> <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam erat volutpat. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. Ut tempus purus at lorem. Morbi scelerisque luctus velit. Nullam dapibus fermentum ipsum. Nullam feugiat, turpis at pulvinar vulputate, erat libero tristique tellus, nec bibendum odio risus sit amet ante. Curabitur ligula sapien, pulvinar a vestibulum quis, facilisis vel sapien. Etiam posuere lacus quis dolor. Praesent id justo in neque elementum ultrices. Cras elementum. Praesent id justo in neque elementum ultrices. Vestibulum erat nulla, ullamcorper nec, rutrum non, nonummy ac, erat. Nulla non lectus sed nisl molestie malesuada. Nam sed tellus id magna elementum tincidunt. Integer malesuada. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Ut tempus purus at lorem. Duis pulvinar.</p> <p>Cras elementum. Praesent dapibus. Etiam ligula pede, sagittis quis, interdum ultricies, scelerisque eu. Nullam lectus justo, vulputate eget mollis sed, tempor sed magna. Mauris dolor felis, sagittis at, luctus sed, aliquam non, tellus. Donec vitae arcu. Nunc auctor. Duis sapien nunc, commodo et, interdum suscipit, sollicitudin et, dolor. Suspendisse nisl. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Aliquam id dolor. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Proin mattis lacinia justo. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Vestibulum fermentum tortor id mi. Sed elit dui, pellentesque a, faucibus vel, interdum nec, diam. Nullam sit amet magna in magna gravida vehicula.</p>
        \n
        <p>Aliquam ornare wisi eu metus. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Etiam posuere lacus quis dolor. Fusce suscipit libero eget elit. Nullam sit amet magna in magna gravida vehicula. Vivamus porttitor turpis ac leo. Sed convallis magna eu sem. Maecenas libero. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis sapien nunc, commodo et, interdum suscipit, sollicitudin et, dolor. Mauris dictum facilisis augue. Integer lacinia. Vivamus porttitor turpis ac leo. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Integer lacinia. Praesent in mauris eu tortor porttitor accumsan. Etiam commodo dui eget wisi. Integer malesuada.</p>

        <p>Phasellus faucibus molestie nisl. Proin in tellus sit amet nibh dignissim sagittis. Et harum quidem rerum facilis est et expedita distinctio. Aliquam erat volutpat. Nunc auctor. Phasellus enim erat, vestibulum vel, aliquam a, posuere eu, velit. Nullam sit amet magna in magna gravida vehicula. Aliquam erat volutpat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nulla non arcu lacinia neque faucibus fringilla. Duis ante orci, molestie vitae vehicula venenatis, tincidunt ac pede.</p>

        <p>Nullam feugiat, turpis at pulvinar vulputate, erat libero tristique tellus, nec bibendum odio risus sit amet ante. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis bibendum, lectus ut viverra rhoncus, dolor nunc faucibus libero, eget facilisis enim ipsum id lacus. Aliquam ante. In rutrum. Sed convallis magna eu sem. Etiam sapien elit, consequat eget, tristique non, venenatis quis, ante. Etiam quis quam. Nullam sapien sem, ornare ac, nonummy non, lobortis a enim. Nunc dapibus tortor vel mi dapibus sollicitudin. Nulla non lectus sed nisl molestie malesuada. Donec vitae arcu.</p>

        <small> beco neduleziteho</small>

        <u>Html</u>

    </string>

    <!--LOGIN ACTIVITY-->
    <string name="sign_in">Registrovat se</string>
    <string name="login">Přihlásit se</string>
    <string name="prompt_email">zadejte email</string>
    <string name="prompt_password">zadejte heslo</string>
    <string name="chooseYourTeam">Vyber si tým</string>
    <string name="blue_team">Modrý tým</string>
    <string name="redTeam">Červený tým</string>
    <string name="blackTeam">Černý tým</string>
    <string name="enter_team">Vstoupit do týmu</string>
    <string name="you_nickname">vaše jméno</string>
    <string name="insert_team_name">vlož název týmu</string>
    <string name="text_description_fraction_chooser">Pro vstup do konkrétního týmu je třeba zadat jeho přesný název</string>


    <string-array name="team_chooser">
        <item>Modrý tým</item>
        <item>Červený tým</item>
        <item>Černý tým</item>
    </string-array>

</resources>
