<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/circle"
        app:showAsAction="never"
        android:title="@string/node">

    </item>

    <item
        android:id="@+id/circle_move"
        app:showAsAction="never"
        android:title="@string/node_move">

    </item>

    <item
        android:id="@+id/line"
        app:showAsAction="never"
        android:title="@string/line">

    </item>

    <item
        android:id="@+id/path"
        app:showAsAction="never"
        android:title="@string/path">

    </item>

    <item
        android:id="@+id/delete"
        app:showAsAction="never"
        android:title="@string/delete_one_object">

    </item>


</menu>